// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parse aggregate parsePreSpreadLines empty 1`] = `Array []`;

exports[`parse aggregate parsePreSpreadLines metadata, blank lines and paragraphs 1`] = `
Array [
  Object {
    "name": "Title",
    "type": "metadata",
    "value": "The Comic",
  },
  Object {
    "type": "blank",
  },
  Object {
    "content": "This is a comic about some people. It is my first comic.",
    "type": "paragraph",
  },
  Object {
    "type": "blank",
  },
  Object {
    "name": "Issue",
    "type": "metadata",
    "value": "5",
  },
  Object {
    "type": "blank",
  },
]
`;

exports[`parse aggregate parseRawSpreadChunk basic 1`] = `
Object {
  "captionCount": 0,
  "captionWordCount": 0,
  "children": Array [
    Object {
      "captionCount": 0,
      "captionWordCount": 0,
      "children": Array [
        Object {
          "content": "Establihsing shot of Manhattan. There is a helicopter hovering above a skyscraper.",
          "type": "paragraph",
        },
      ],
      "description": "Establihsing shot of Manhattan. There is a helicopter hovering above a skyscraper.",
      "dialogueCount": 0,
      "dialogueWordCount": 0,
      "number": 1,
      "sfxCount": 0,
      "speakers": Array [],
      "type": "panel",
    },
  ],
  "dialogueCount": 0,
  "dialogueWordCount": 0,
  "pageCount": 1,
  "panelCount": 1,
  "sfxCount": 0,
  "speakers": Array [],
  "type": "spread",
}
`;

exports[`parse aggregate parseRawSpreadChunk multiple letterings 1`] = `
Object {
  "captionCount": 5,
  "captionWordCount": 24,
  "children": Array [
    Object {
      "captionCount": 0,
      "captionWordCount": 0,
      "children": Array [
        Object {
          "content": "Establihsing shot of NYC. There is a helicopter hovering above a skyscraper.",
          "type": "paragraph",
        },
        Object {
          "type": "blank",
        },
      ],
      "description": "Establihsing shot of NYC. There is a helicopter hovering above a skyscraper.",
      "dialogueCount": 0,
      "dialogueWordCount": 0,
      "number": 1,
      "sfxCount": 0,
      "speakers": Array [],
      "type": "panel",
    },
    Object {
      "captionCount": 2,
      "captionWordCount": 11,
      "children": Array [
        Object {
          "content": "The character walks down the street. Hands stuffed in pockets.",
          "type": "paragraph",
        },
        Object {
          "content": Array [
            Object {
              "content": "They're coming after me. I can feel it.",
              "type": "text",
            },
          ],
          "modifier": null,
          "number": 1,
          "type": "caption",
          "wordCount": 8,
        },
        Object {
          "content": Array [
            Object {
              "content": "Am I paranoid?",
              "type": "text",
            },
          ],
          "modifier": null,
          "number": 2,
          "type": "caption",
          "wordCount": 3,
        },
        Object {
          "type": "blank",
        },
      ],
      "description": "The character walks down the street. Hands stuffed in pockets.",
      "dialogueCount": 0,
      "dialogueWordCount": 0,
      "number": 2,
      "sfxCount": 0,
      "speakers": Array [],
      "type": "panel",
    },
    Object {
      "captionCount": 1,
      "captionWordCount": 6,
      "children": Array [
        Object {
          "content": "Character looks behind him, thinking he is being followed.",
          "type": "paragraph",
        },
        Object {
          "content": Array [
            Object {
              "content": "I like to call it prepared.",
              "type": "text",
            },
          ],
          "modifier": null,
          "number": 3,
          "type": "caption",
          "wordCount": 6,
        },
        Object {
          "type": "blank",
        },
      ],
      "description": "Character looks behind him, thinking he is being followed.",
      "dialogueCount": 0,
      "dialogueWordCount": 0,
      "number": 3,
      "sfxCount": 0,
      "speakers": Array [],
      "type": "panel",
    },
    Object {
      "captionCount": 1,
      "captionWordCount": 4,
      "children": Array [
        Object {
          "content": "Character running frantically.",
          "type": "paragraph",
        },
        Object {
          "content": Array [
            Object {
              "content": "Help! Help!",
              "type": "text",
            },
          ],
          "modifier": null,
          "number": 4,
          "speaker": "CHARACTER",
          "type": "dialogue",
          "wordCount": 2,
        },
        Object {
          "content": Array [
            Object {
              "content": "Nobody cares, not here.",
              "type": "text",
            },
          ],
          "modifier": null,
          "number": 5,
          "type": "caption",
          "wordCount": 4,
        },
      ],
      "description": "Character running frantically.",
      "dialogueCount": 1,
      "dialogueWordCount": 2,
      "number": 4,
      "sfxCount": 0,
      "speakers": Array [
        "CHARACTER",
      ],
      "type": "panel",
    },
    Object {
      "captionCount": 1,
      "captionWordCount": 3,
      "children": Array [
        Object {
          "content": "Character is shot in the back.",
          "type": "paragraph",
        },
        Object {
          "content": "BLAM!",
          "modifier": null,
          "number": 6,
          "type": "sfx",
        },
        Object {
          "content": Array [
            Object {
              "content": "Bout damn time.",
              "type": "text",
            },
          ],
          "modifier": null,
          "number": 7,
          "type": "caption",
          "wordCount": 3,
        },
      ],
      "description": "Character is shot in the back.",
      "dialogueCount": 0,
      "dialogueWordCount": 0,
      "number": 5,
      "sfxCount": 1,
      "speakers": Array [],
      "type": "panel",
    },
  ],
  "dialogueCount": 1,
  "dialogueWordCount": 2,
  "pageCount": 1,
  "panelCount": 5,
  "sfxCount": 1,
  "speakers": Array [
    "CHARACTER",
  ],
  "type": "spread",
}
`;

exports[`parse aggregate parseRawSpreadChunk multiple panels 1`] = `
Object {
  "captionCount": 0,
  "captionWordCount": 0,
  "children": Array [
    Object {
      "captionCount": 0,
      "captionWordCount": 0,
      "children": Array [
        Object {
          "content": "Establihsing shot of Manhattan. There is a helicopter hovering above a skyscraper.",
          "type": "paragraph",
        },
        Object {
          "type": "blank",
        },
      ],
      "description": "Establihsing shot of Manhattan. There is a helicopter hovering above a skyscraper.",
      "dialogueCount": 0,
      "dialogueWordCount": 0,
      "number": 1,
      "sfxCount": 0,
      "speakers": Array [],
      "type": "panel",
    },
    Object {
      "captionCount": 0,
      "captionWordCount": 0,
      "children": Array [
        Object {
          "content": "The character walks down the street. Hands stuffed in pockets.",
          "type": "paragraph",
        },
        Object {
          "type": "blank",
        },
      ],
      "description": "The character walks down the street. Hands stuffed in pockets.",
      "dialogueCount": 0,
      "dialogueWordCount": 0,
      "number": 2,
      "sfxCount": 0,
      "speakers": Array [],
      "type": "panel",
    },
    Object {
      "captionCount": 0,
      "captionWordCount": 0,
      "children": Array [
        Object {
          "content": "Character looks behind him, thinking he is being followed.",
          "type": "paragraph",
        },
        Object {
          "type": "blank",
        },
      ],
      "description": "Character looks behind him, thinking he is being followed.",
      "dialogueCount": 0,
      "dialogueWordCount": 0,
      "number": 3,
      "sfxCount": 0,
      "speakers": Array [],
      "type": "panel",
    },
  ],
  "dialogueCount": 0,
  "dialogueWordCount": 0,
  "pageCount": 1,
  "panelCount": 3,
  "sfxCount": 0,
  "speakers": Array [],
  "type": "spread",
}
`;
